MAP : Refactoring server.  Adding new web pages with some basic mobile first css.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "index.js",
    "scripts": {
       "test": "mocha",
-      "start": "NODE_ENV=dev nodejs express.js"
+      "start": "NODE_ENV=dev nodejs bin/www"
    },
    "repository": {
       "type": "git",
@@ -27,6 +27,7 @@
       "hoek": "^5.0.3",
       "mocha": "^5.1.1",
       "mongodb": "^2.2.35",
+      "react": "^16.5.0",
       "request": "^2.86.0",
       "request-promise": "^4.2.2"
    }
