--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
       "chai": "^4.1.2",
       "chai-http": "^4.0.0",
       "config": "^1.30.0",
+      "cookie-parser": "^1.4.3",
       "ejs": "^2.5.9",
       "express": "^4.16.3",
+      "express-session": "^1.15.6",
       "hoek": "^5.0.3",
       "jquery": "^3.3.1",
       "jquery-serializejson": "^2.8.1",
       "mocha": "^5.1.1",
       "mongodb": "^2.2.35",
+      "passport": "^0.4.0",
       "react": "^16.5.0",
       "request": "^2.86.0",
       "request-promise": "^4.2.2"
